# tta-devops

./: README.md
.github/workflows/: my-app.yaml
my-app/: dockerfile  pyproject.toml
my-app-cd/: my-app-deploy.yaml
my-app/tests/: test_main.py
