[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "suvin",email = "wltnqls54@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "my_app", from = "src"}]


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
